Bug 1814531: Add png to pasteboard on MacOS. r=edgar,mac-reviewers,spohl

Previously, images of any kind were converted to TIFF format when copy/pasted into other apps.
Especially with the MacOS Messages app this led to a bad user experience
because the Messages app did not convert the TIFF data to some other (more compressed) image format.

With this patch the image is also added to the pasteboard in PNG format.
This allows the pasting app to choose a more compressed version of the image.

Differential Revision: https://phabricator.services.mozilla.com/D190056